Paths Commit